materials calculation + word dif

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
     <a href="{{ url_for('namegen')}}" >Name generator</a>
     <a href="{{ url_for('image')}}">Image generator</a>
     <a href="{{ url_for('textgen')}}">Text generator</a>
+    <a href="{{ url_for('materialsname')}}">Material Rigips calc</a>
+    <a href="{{ url_for('taskdescription')}}">Word difenition</a>
+    
+
 
   </div>
 
