--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,26 @@
 <body>
   <!--<img src="{{ url_for('static', filename='dog.png') }}" class="icon" />-->
 
-    <img class="logomain" src="{{ url_for('static', filename='SGR logo.png') }}" class="icon" />
+  <img
+    class="logomain"
+    src="{{ url_for('static', filename='SGR logo.png') }}"
+    class="icon"
+  />
 
-  <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_lphquaqr.json"  background="transparent"  speed="1"  style="width: 350px; height: 350px;"  loop  autoplay></lottie-player>
+  <lottie-player
+    src="https://assets2.lottiefiles.com/packages/lf20_lphquaqr.json"
+    background="transparent"
+    speed="1"
+    style="width: 350px; height: 350px"
+    loop
+    autoplay
+  ></lottie-player>
   <h3>Some Service list</h3>
   <div class="vertical-menu">
-    <a href="{{ url_for('namegen')}}" >Name generator</a>
+    <a href="{{ url_for('namegen')}}">Name generator</a>
     <a href="{{ url_for('image')}}">Image generator</a>
     <a href="{{ url_for('textgen')}}">Text generator</a>
     <a href="{{ url_for('materialsname')}}">Material Rigips calc</a>
     <a href="{{ url_for('taskdescription')}}">Word difenition</a>
-    
-
-
   </div>
-
-
 </body>
