--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,13 @@
   <div class="vertical-menu">
     <a href="{{ url_for('namegen')}}">Name generator</a>
     <a href="{{ url_for('image')}}">Image generator</a>
+    <a href="{{ url_for('imageupload')}}">Image description</a>
     <a href="{{ url_for('textgen')}}">Text generator</a>
     <a href="{{ url_for('materialsname')}}">Material Rigips calc</a>
     <a href="{{ url_for('taskdescription')}}">Word difenition</a>
   </div>
+  <p>
+    For cleaning images cash - please call
+    https://openaitesting.azurewebsites.net/delete_images
+  </p>
 </body>
